welcome.lessons.welcome.array.search.IndexOfMaxValue.scala.error
indexOfMaxValue:2: error: integer number too large
  var max = -10000000000000000
             ^indexOfMaxValue:3: error: ';' expected but 'var' found.
  var o = 0
  ^