welcome.lessons.welcome.array.search.IndexOfMaxValue.scala.code
def indexOfMaxValue(nums:Array[Int]):Int = {
  var max = -10000000000000000
  var o = 0
  for (i<-0 to nums.length-1){
    if (nums(i)>max){
      max = nums(i)
      o=i
    }
  }
  return o
}